# OGameX

./: BATTLE_ENGINE_PERFORMANCE_ANALYSIS.md  add_reaper_crawler_columns.sql
app/Console/Commands/Tests/: SimulateBattle.php
app/Factories/: PlanetServiceFactory.php
app/GameMessages/: EspionageReport.php
app/GameMissions/: AttackMission.php  ExpeditionMission.php
app/GameMissions/BattleEngine/: BattleEngine.php
app/GameObjects/: CivilShipObjects.php  MilitaryShipObjects.php
app/GameObjects/Models/Fields/: GameObjectProduction.php
app/GameObjects/Services/Properties/: AttackPropertyService.php  CapacityPropertyService.php  FuelPropertyService.php  ShieldPropertyService.php  SpeedPropertyService.php  StructuralIntegrityPropertyService.php
app/Http/Controllers/: BattleSimulatorController.php  CharacterClassController.php  ShipyardController.php  SimulationController.php
app/Http/Controllers/Admin/: DeveloperShortcutsController.php  (+1 more)
app/Models/: ProductionIndex.php  User.php
app/Services/: EspionageApiCodeService.php  ObjectService.php  PlanetService.php  PlayerService.php  SettingsService.php
database/migrations/: 2025_11_08_120000_add_player_class_to_users_table.php  2025_11_13_120000_add_reaper_ship_columns.php
public/: run-migration.php
resources/views/ingame/: battlesimulator.blade.php
routes/: web.php
rust/: BUILD_INSTRUCTIONS.md  OPTIMIZATION_README.md  TESTING_INSTRUCTIONS.md
rust/battle_engine_debug/src/: main.rs
rust/battle_engine_ffi/: Cargo.toml
rust/battle_engine_ffi/src/: lib.rs  optimized.rs  original.rs
(+13 files in other folders)
