[package]
name = "battle_engine_ffi"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "compare_engines"
path = "src/bin/compare_engines.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
memory-stats = "1.2.0"
rayon = "1.10"


